--- a/package.json
+++ b/package.json
@@ -1,21 +1,47 @@
 {
   "name": "react_native_crash_course",
   "version": "1.0.0",
-  "main": "expo/AppEntry.js",
+  "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "lint": "eslint .",
+    "lintFixAll": "eslint 'src/**/*.{js,jsx}'",
+    "prettierFixAll": "prettier --write 'src/**/*.{js,jsx}'",
+    "fix:lintPrettier": "yarn prettierFixAll && yarn lintFixAll"
   },
   "dependencies": {
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-react-native": "^4.1.0",
     "expo": "~51.0.28",
+    "expo-av": "^14.0.7",
+    "expo-constants": "~16.0.2",
+    "expo-font": "~12.0.9",
+    "expo-image-picker": "^15.0.7",
+    "expo-linking": "~6.3.1",
+    "expo-router": "~3.5.23",
     "expo-status-bar": "~1.12.1",
+    "nativewind": "^2.0.11",
+    "prettier": "^3.3.3",
     "react": "18.2.0",
-    "react-native": "0.74.5"
+    "react-native": "0.74.5",
+    "react-native-animatable": "^1.4.0",
+    "react-native-appwrite": "^0.5.0",
+    "react-native-safe-area-context": "4.10.5",
+    "react-native-screens": "3.31.1",
+    "react-native-url-polyfill": "^2.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "eslint": "^8.57.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-jsx-a11y": "^6.9.0",
+    "eslint-plugin-react": "^7.35.0",
+    "eslint-plugin-react-hooks": "^4.6.2",
+    "tailwindcss": "^3.3.2"
   },
   "private": true
 }
